# restop

./: Cargo.toml  README.md
.github/workflows/: restop.yml  rust.yml
lib/process_data/src/: pci_slot.rs
src/: app.rs  lib.rs  main.rs  ring.rs  tarits.rs  utils.rs
src/component/: grouped_lines.rs  input.rs  mod.rs  stateful_lines.rs
src/resource/: battery.rs  cpu.rs  drive.rs  gpu.rs  memory.rs  mod.rs  network.rs  process.rs
src/sensor/: apps.rs  battery.rs  cpu.rs  drive.rs  memory.rs  mod.rs  network.rs  pci.rs  process.rs  settings.rs  time.rs  units.rs
src/sensor/gpu/: amd.rs  intel.rs  mod.rs  nvidia.rs  other.rs
src/view/: mod.rs  sidebar_and_page.rs  theme.rs
