[package]
name = "resources"
version = "1.4.0"
authors = ["nokyan <nokyan@tuta.io>"]
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
strip = true
lto = true

[dependencies]
process-data = { path = "lib/process_data" }
glob = "0.3.1"
anyhow = "1.0.86"
regex = "1.10.4"
sysconf = "0.3.4"
nvml-wrapper = "0.10.0"
nix = { version = "0.29.0", default-features = false, features = ["signal"] }
serde = { version = "1.0.203", features = ["serde_derive"] }
rmp-serde = "1.3.0"
rust-ini = "0.21.0"
strum = "0.26.2"
strum_macros = "0.26.3"
once_cell = "1.19.0"
hashbrown = "0.14.5"
num_cpus = "1.16.0"
