[package]
name = "restop"
version = "0.0.1-241031"
authors = ["aeghn <aeghn@outlook.com>"]
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat" 
debug = true
incremental = true

[dependencies]
process-data = { path = "lib/process_data" }
glob = { version = "0.3.1" }
regex = "1.10.4"
sysconf = "0.3.4"
nvml-wrapper = "0.10.0"
nix = { version = "0.29.0", default-features = false, features = [
    "signal",
    "fs",
] }
serde = { version = "1.0.203", features = ["serde_derive"] }
strum = "0.26.2"
strum_macros = "0.26.3"
once_cell = "1.19.0"
hashbrown = "0.14.5"
num_cpus = "1.16.0"
chrono = "0.4.38"
tracing = "0.1.40"

bitflags = "2.5.0"
chin-tools = { path = "../chin-tools/crates/chin-tools" }
chin-terminal-utils = { path = "../chin-tools/crates/chin-terminal-utils" }
anyhow = "*"
crossterm = { version = "0.27.0", features = ["event-stream"] }
itertools = "0.13.0"
flume = { version = "0.11.0", default-features = false, features = ["async"] }
ratatui = { version = "0", features = [] }
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
append-only-vec = "0.1.4"
rust-ini = "0.21.0"
libc = "0.2.155"
unicode-width = "0.1.13"
